update docker deploy

--- a/ISFG.EmailBox/appsettings.json
+++ b/ISFG.EmailBox/appsettings.json
@@ -35,7 +35,7 @@
     "Test1": "Yep"
   },
   "Alfresco": {
-    "Url": "http://hostname.domain:8082",
+    "Url": "http://alfresco:8080",
     "TokenExpire": 30,
     "SystemUser": {
       "Username": "emailbox",
